Replace Font Awesome with favicon and improve TOTP

--- a/frontend/account_dashboard.html
+++ b/frontend/account_dashboard.html
@@ -45,7 +45,7 @@
     }
 
     function creditCardFormatter(cell){
-        return cell.getValue() ? '<i class="fa-solid fa-credit-card text-indigo-600"></i>' : '';
+        return cell.getValue() ? '<img src="../favicon.svg" class="w-4 h-4" alt="">' : '';
     }
 
     fetch('../php_backend/public/account_dashboard.php')
