--- a/frontend/ai_tags.html
+++ b/frontend/ai_tags.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Expires" content="0">
     <title>AI Tags</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- Icons use favicon.svg; no external library needed -->
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
 <div class="flex min-h-screen">
@@ -28,7 +28,7 @@
         <section>
             <h2 class="text-xl font-semibold mb-2">Generate Tags</h2>
             <p class="mb-4">Use AI to suggest tags and categories for untagged transactions.</p>
-            <button id="run" class="bg-green-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-robot mr-1"></i>Run AI Tagging</button>
+            <button id="run" class="bg-green-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Run AI Tagging</button>
             <div id="result" class="mt-4"></div>
         </section>
     </main>
@@ -58,11 +58,11 @@ document.getElementById('run').addEventListener('click', async () => {
     const btn = document.getElementById('run');
     btn.disabled = true;
     btn.classList.add('opacity-50', 'cursor-not-allowed');
-    resultEl.innerHTML = '<i class="fa-solid fa-spinner fa-spin mr-2"></i>Submitting to AI...';
+    resultEl.innerHTML = '<img src="../favicon.svg" class="inline w-4 h-4 mr-2 animate-spin" alt="">Submitting to AI...';
     showMessage('AI tagging started');
     try {
         const res = await fetch('../php_backend/public/ai_tags.php', {method: 'POST'});
-        resultEl.innerHTML = '<i class="fa-solid fa-spinner fa-spin mr-2"></i>Awaiting AI response...';
+        resultEl.innerHTML = '<img src="../favicon.svg" class="inline w-4 h-4 mr-2 animate-spin" alt="">Awaiting AI response...';
         const data = await res.json();
         if (data.error) {
             resultEl.textContent = data.error;
