--- a/frontend/report.html
+++ b/frontend/report.html
@@ -34,7 +34,7 @@
             </form>
             <div class="mt-4 flex items-center space-x-2">
                 <label class="block flex-1">Saved Reports: <select id="saved-reports" class="border p-2 rounded w-full" data-help="Load a saved report"></select></label>
-                <button type="button" id="delete-report" class="bg-red-600 text-white px-3 py-2 rounded" aria-label="Delete saved report"><i class="fa-solid fa-trash"></i></button>
+                <button type="button" id="delete-report" class="bg-red-600 text-white px-3 py-2 rounded" aria-label="Delete saved report"><img src="../favicon.svg" class="inline w-4 h-4" alt=""></button>
             </div>
             <div id="results-grid" class="mt-4"></div>
             <div id="chart" class="mt-6" style="height:400px;"></div>
