--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/svg+xml" href="../favicon.svg">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- Reuse site favicon for inline icons instead of Font Awesome -->
     <style>
         body { font-family: 'Inter', sans-serif; }
 
@@ -27,8 +27,8 @@
         <nav id="menu" class="w-64 flex-shrink-0 bg-white border-r p-6"></nav>
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <div class="flex items-center mb-4">
-                <h1 class="text-2xl font-semibold flex-1 text-indigo-700"><i class="fas fa-shield-alt mr-2"></i>Two-Factor Authentication</h1>
-                <button id="help-btn" class="text-indigo-600 accent"><i class="fas fa-circle-info"></i></button>
+                <h1 class="text-2xl font-semibold flex-1 text-indigo-700"><img src="../favicon.svg" class="inline w-6 h-6 mr-2" alt="">Two-Factor Authentication</h1>
+                <button id="help-btn" class="text-indigo-600 accent"><img src="../favicon.svg" class="inline w-5 h-5" alt=""></button>
             </div>
             <p class="mb-4">Set up TOTP-based authentication and verify your one-time codes.</p>
 
@@ -36,7 +36,7 @@
                 <h2 class="text-xl mb-4">Setup</h2>
                 <form id="generate-form" class="space-y-4">
                     <input id="gen-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
-                    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-qrcode mr-2"></i>Generate QR</button>
+                    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-2" alt="">Generate QR</button>
                 </form>
 
                 <div id="qr" class="mt-4 mx-auto"></div>
@@ -48,7 +48,7 @@
                 <form id="verify-form" class="space-y-4">
                     <input id="ver-username" type="text" placeholder="Username" class="border p-2 rounded w-full" data-help="Enter your account username">
                     <input id="token" type="text" placeholder="TOTP Code" class="border p-2 rounded w-full" data-help="Enter the 6-digit code from your authenticator">
-                    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fas fa-check mr-2"></i>Verify</button>
+                    <button type="submit" class="bg-indigo-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-2" alt="">Verify</button>
                 </form>
             </div>
         </main>
