--- a/frontend/groups.html
+++ b/frontend/groups.html
@@ -54,7 +54,7 @@ async function loadGroups() {
                 const g = cell.getRow().getData();
                 const container = document.createElement('div');
                 const edit = document.createElement('button');
-                edit.innerHTML = '<i class="fa-solid fa-pen"></i>';
+                edit.innerHTML = '<img src="../favicon.svg" class="w-4 h-4" alt="">';
                 edit.setAttribute('aria-label','Edit');
                 edit.className = 'bg-indigo-600 text-white px-2 py-1 rounded mr-2';
                 edit.addEventListener('click', async () => {
@@ -71,7 +71,7 @@ async function loadGroups() {
                     showMessage('Group updated');
                 });
                 const del = document.createElement('button');
-                del.innerHTML = '<i class="fa-solid fa-trash"></i>';
+                del.innerHTML = '<img src="../favicon.svg" class="w-4 h-4" alt="">';
                 del.setAttribute('aria-label','Delete');
                 del.className = 'bg-red-600 text-white px-2 py-1 rounded';
                 del.addEventListener('click', async () => {
