--- a/frontend/processes.html
+++ b/frontend/processes.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Expires" content="0">
     <title>Run Processes</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!-- Icons use favicon.svg; no Font Awesome needed -->
 </head>
 <body class="bg-gradient-to-b from-indigo-50 to-white font-sans">
     <div class="flex min-h-screen">
@@ -18,10 +18,10 @@
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Run Processes</h1>
             <p class="mb-4">Run background tasks like auto-tagging, category or segment assignment. These automated processes tidy your data so reports stay accurate without manual effort.</p>
             <div class="space-x-4">
-                <button id="tagging-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-tags mr-1"></i>Run Tagging</button>
-                <button id="categories-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-list mr-1"></i>Apply Categories</button>
-                <button id="segments-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-layer-group mr-1"></i>Apply Segments</button>
-                <button id="clear-btn" class="bg-red-600 text-white px-4 py-2 rounded"><i class="fa-solid fa-eraser mr-1"></i>Clear Tags/Categories/Segments</button>
+                <button id="tagging-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Run Tagging</button>
+                <button id="categories-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Apply Categories</button>
+                <button id="segments-btn" class="bg-indigo-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Apply Segments</button>
+                <button id="clear-btn" class="bg-red-600 text-white px-4 py-2 rounded"><img src="../favicon.svg" class="inline w-4 h-4 mr-1" alt="">Clear Tags/Categories/Segments</button>
             </div>
             <div id="progress-container" class="w-full bg-gray-200 h-2 mt-4 rounded hidden">
                 <div id="progress-bar" class="h-full bg-indigo-600 w-0"></div>
