--- a/frontend/topbar.html
+++ b/frontend/topbar.html
@@ -3,7 +3,7 @@
   <div class="w-full flex items-center justify-between px-4">
     <div class="flex items-center space-x-4">
       <img src="../favicon.svg" alt="Finance Manager Logo" class="h-8 w-8">
-      <button id="menu-toggle" class="md:hidden bg-indigo-700 p-2 rounded"><i class="fa-solid fa-bars"></i></button>
+      <button id="menu-toggle" class="md:hidden bg-indigo-700 p-2 rounded"><img src="../favicon.svg" class="h-4 w-4" alt=""></button>
       <div class="font-bold text-lg flex items-center">
         <span>Personal Finance Manager</span>
         <span id="release-number" class="ml-2 bg-indigo-700 text-white text-[0.675rem] px-2 py-0.5 rounded">v0.0.0</span>
@@ -12,15 +12,15 @@
     <div id="topbar-right" class="flex items-center space-x-4 transition-transform duration-300">
       <form id="topbar-search" action="search.html" method="get" class="flex">
         <input type="text" name="value" placeholder="Search transactions" class="p-1 rounded text-black" />
-        <button type="submit" class="ml-2"><i class="fa-solid fa-magnifying-glass"></i></button>
+        <button type="submit" class="ml-2"><img src="../favicon.svg" class="h-4 w-4" alt=""></button>
       </form>
       <a id="latest-statement-link" href="monthly_statement.html" class="flex items-center">
 
-        <i class="fa-solid fa-file-invoice-dollar mr-1"></i>
+        <img src="../favicon.svg" class="h-4 w-4 mr-1" alt="">
         <span id="latest-statement-text">Latest Statement</span>
       </a>
       <div id="user-info" class="flex items-center">
-        <i class="fa-solid fa-circle-user mr-1"></i>
+        <img src="../favicon.svg" class="h-4 w-4 mr-1" alt="">
         <span id="current-user">&nbsp;</span>
       </div>
     </div>
