--- a/frontend/2fa.html
+++ b/frontend/2fa.html
@@ -12,7 +12,7 @@
 
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
     <!-- Reuse site favicon for inline icons instead of Font Awesome -->
     <style>
         body { font-family: 'Inter', sans-serif; }
