--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,7 +10,7 @@
     <title>Finance Manager</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&family=Inter:wght@400&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/svg+xml" href="../favicon.svg">
+    <link rel="icon" type="image/svg+xml" sizes="any" href="/favicon.svg">
     <!-- Inline icons use favicon.svg; Font Awesome not required -->
     <style>
         body { font-family: 'Inter', sans-serif; }
